# metricflow

./: .gitignore  README.md  docker-compose.example.yml  docker-compose.yml
.docker/: .token_seed
.docker/buildx/: .buildNodeID
backend/: .dockerignore  Dockerfile  Dockerfile.development  Dockerfile.production  pyproject.toml  requirements.txt
backend/application/: __init__.py  dtos.py  use_cases.py
backend/application/interfaces/: data_processor.py  report_generator.py
backend/core/: __init__.py  models.py
backend/infrastructure/: __init__.py
backend/infrastructure/config/: redis_config.py  settings.py
backend/infrastructure/file_processors/: __init__.py  csv_processor.py  excel_report_generator.py  pdf_report_generator.py
backend/interfaces/: main.py
backend/interfaces/api/: routes.py  schemas.py
docs/: metricflow-solution-overview-and-architecture.md
docs/diagrams/architecture/: backend-architecture-diagram.drawio  frontend-architecture-diagram.drawio
docs/diagrams/deployment/: aws-deployment-architecture.drawio
frontend/: .dockerignore  Dockerfile  Dockerfile.development  Dockerfile.production  index.html  nginx.conf  package-lock.json  package.json  start.sh  vite.config.ts
frontend/src/: App.tsx  TestTailwind.tsx  index.css  main.tsx
frontend/src/components/: MetricCard.tsx  MetricsDashboard.tsx  RevenueChart.tsx  UploadZone.tsx
frontend/src/services/: apiClient.ts
samples/: README.md  basic_sales.csv  multi_month.csv  with_pending_sales.csv
