[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "metricflow-backend"
version = "0.1.0"
description = "MetricFlow backend API"
requires-python = ">=3.9"

# ⭐ Define explicitamente os pacotes a serem incluídos
[tool.setuptools.packages.find]
where = ["."]

include = ["backend", "backend.*"]

[tool.setuptools.package-dir]
"backend" = "."